@@ -1,3 +1,7 @@
+2004-10-24  Dominique Devriese  <devriese@kde.org>
+
+	* Added a few new icons from Bart Van Hove bartvanhove _at_ skynet _dot_ be
+
 2004-10-23  Maurizio Paolini <paolini@dmf.unicatt.it>
 
 	* Added construction of the center of curvature of a curve
